toolkit/jaeger/jaeger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jaeger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jaeger
  name: jaeger
  namespace: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      annotations:
        istio-injection: disabled
        prometheus.io/scrape: "false"
        prometheus.io/port: "8080"           
      labels:
        app: jaeger
        name: jaeger
        version: v1
    spec:
      containers:
      - image: jaegertracing/all-in-one:latest
        name: jaeger
        ports:
        - containerPort: 16686
          name: query
          protocol: TCP
        - containerPort: 14268
          name: thrift  
          protocol: TCP
        - containerPort: 9411
          name: zipkin
          protocol: TCP
        - containerPort: 6831
          name: agent
          protocol: UDP
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: jaeger   
  labels:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: jaeger 
spec:
  ports:
  - name: query
    port: 16686
    protocol: TCP  
  - name: thrift
    port: 14268
    protocol: TCP
  - name: zipkin
    port: 9411
    protocol: TCP
  - name: agent
    port: 6831
    protocol: UDP        
  selector:
    app: jaeger
  type: ClusterIP
---
