toolkit/jaeger/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-query
  namespace: jaeger
spec:
  ingressClassName: cilium
  rules:
  - host: jaeger.k8s.cluster.local
    http:
      paths:
      - backend:
          service:
            name: jaeger
            port:
              number: 16686
        path: /
        pathType: Prefix
